# delila-rs

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  build.rs  config.example.toml  config.test.toml  config.toml  deny.toml
.github/workflows/: ci.yml
.serena/: project.yml
TODO/: 00_psd2_decoder_bugfix.md  06_caen_driver_design.md  07_digitizer_config_design.md  07_refactoring_plan.md  09_timestamp_sorting_design.md  10_zero_copy_merger.md  11_operator_web_ui.md  12_refactoring_plan.md  13_metrics_api.md  15_digitizer_implementation.md  16_linux_migration_checklist.md  19_settings_ui.md  CURRENT.md
config/: config_psd1_test.toml  config_psd2_real.toml  config_psd2_test.toml
config/digitizers/: psd1_test.json  psd2_test.json
docker/: README.md  docker-compose.yml  mongo-init.js
docs/: control_system_design.md  digitizer_system_spec.md  psd1_decoder_spec.md
docs/architecture/: config_and_deployment.md  operator_web_ui.md
docs/devtree_examples/: dt5730b_psd1_sn990.json
macros/: convert_to_tree.C  read_delila.C  read_dump.C
scripts/: clean_logs.sh  daq_ctl.sh  start_daq.sh  stop_daq.sh
src/: lib.rs
src/common/: cli.rs  command.rs  command_task.rs  error.rs  metrics.rs  mod.rs  shutdown.rs  state.rs
src/config/: digitizer.rs  mod.rs
src/data_sink/: mod.rs
src/data_source_emulator/: mod.rs
src/merger/: mod.rs
src/monitor/: mod.rs  monitor_ui.html
src/operator/: client.rs  digitizer_repository.rs  mod.rs  routes.rs  run_repository.rs
src/reader/: mod.rs
src/recorder/: format.rs  mod.rs
tests/: felib_integration_test.rs  file_format_test.rs  parameter_exhaustive_test.rs
web/operator-ui/: README.md  angular.json  eslint.config.js  package-lock.json  (+1 more)
(+68 files in other folders)
